# Trainable-Quantum-Spectral-Models-for-Partial-Differential-Equations

./: .gitignore  README.md  main.py  pyproject.toml
Data/Helmholtz/: helmholtz_N16_epochs180_seeds3_20260504_163221.pkl
Data/Poisson/: poisson_N16_epochs180_seeds3_20260504_163301.pkl
Data/VarPoisson/: varpoisson_N16_epochs180_seeds3_20260504_163028.pkl
Paper Plots/: combined_training_fidelity.py  combined_training_loss.py  combined_training_modewise.py  paper_plot_utils.py
Paper Plots/Helmholtz/: Plots.ipynb  load_results.py  plots.py
Paper Plots/Poisson/: Plots.ipynb  load_results.py  plots.py
Paper Plots/VarPoisson/: Plots.ipynb  load_results.py  plots.py
TrainingQSM/Helmholtz/: Helmholtz.ipynb  helmholtz.py
TrainingQSM/Poisson/: Poisson.ipynb  poisson.py
TrainingQSM/VarPoisson/: VarPoisson.ipynb  var_poisson.py
